<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_theme"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="8dp">

        <EditText
            android:id="@+id/search_et"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="18dp"
            android:layout_marginBottom="10dp"
            android:layout_weight="2"
            android:autofillHints="@string/edit_text"
            android:fontFamily="casual"
            android:hint="@string/edit_text"
            android:inputType="text"
            android:textColor="@color/white"
            android:textColorHint="@color/white" />

        <Button
            android:id="@+id/search_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:fontFamily="casual"
            android:text="@string/search_btn"
            android:textAllCaps="false"
            app:backgroundTint="@color/material_on_surface_emphasis_medium" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:orientation="vertical"
                android:padding="10dp"
                app:layout_constraintBottom_toTopOf="@+id/textView"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="MissingConstraints">

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/country_tv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="casual"
                        android:textColor="@color/white"
                        android:textSize="20sp"
                        android:textStyle="bold"
                        app:layout_constraintEnd_toStartOf="@+id/country_tv"
                        app:layout_constraintStart_toStartOf="parent"
                        tools:ignore="MissingConstraints,NotSibling"
                        tools:layout_editor_absoluteY="16dp" />



                    <TextView
                        android:id="@+id/city_tv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="40dp"
                        android:layout_marginLeft="40dp"
                        android:fontFamily="casual"
                        android:textColor="@color/white"
                        android:textSize="20sp"
                        tools:ignore="MissingConstraints"
                        tools:layout_editor_absoluteX="37dp"
                        tools:layout_editor_absoluteY="58dp" />

                </RelativeLayout>

                <TextView
                    android:id="@+id/time_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="casual"
                    android:textColor="@color/white"
                    android:textSize="20sp" />

            </LinearLayout>

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginStart="60dp"
                android:layout_marginLeft="40dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="24dp"
                android:layout_marginRight="24dp"
                android:layout_marginBottom="92dp"
                android:contentDescription="@string/img"
                android:scaleType="centerCrop" />

        </LinearLayout>

        <TextView
            android:id="@+id/temp_tv"
            android:layout_width="match_parent"
            android:layout_height="88dp"
            android:fontFamily="casual"
            android:gravity="center_horizontal"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="70sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent" />

        <ProgressBar
            android:id="@+id/pg_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="invisible" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:baselineAligned="false"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/lat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginLeft="32dp"
                android:layout_marginTop="5dp"
                android:fontFamily="casual"
                android:text="@string/latitude"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold"
                android:visibility="invisible"
                app:layout_constraintEnd_toStartOf="@+id/lattitude_tv"
                app:layout_constraintHorizontal_bias="0.302"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="HardcodedText,MissingConstraints" />

            <TextView
                android:id="@+id/lon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginLeft="32dp"
                android:layout_marginTop="5dp"
                android:fontFamily="casual"
                android:text="@string/longitude"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold"
                android:visibility="invisible"
                app:layout_constraintEnd_toStartOf="@+id/lattitude_tv2"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView3"
                tools:ignore="HardcodedText,MissingConstraints" />

            <TextView
                android:id="@+id/hum"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginLeft="32dp"
                android:layout_marginTop="5dp"
                android:fontFamily="casual"
                android:text="@string/Humidity"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold"
                android:visibility="invisible"
                app:layout_constraintEnd_toStartOf="@+id/lattitude_tv3"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView2"
                tools:ignore="HardcodedText,MissingConstraints" />

            <TextView
                android:id="@+id/sr"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginLeft="32dp"
                android:layout_marginTop="5dp"
                android:fontFamily="casual"
                android:text="@string/Sunrise"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold"
                android:visibility="invisible"
                app:layout_constraintEnd_toStartOf="@+id/lattitude_tv4"
                app:layout_constraintHorizontal_bias="0.029"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView4"
                tools:ignore="HardcodedText,MissingConstraints" />

            <TextView
                android:id="@+id/ss"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginLeft="32dp"
                android:layout_marginTop="5dp"
                android:fontFamily="casual"
                android:text="@string/Sunset"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold"
                android:visibility="invisible"
                app:layout_constraintEnd_toStartOf="@+id/lattitude_tv5"
                app:layout_constraintHorizontal_bias="0.014"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView5"
                tools:ignore="HardcodedText,MissingConstraints" />

            <TextView
                android:id="@+id/prsr"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginLeft="32dp"
                android:layout_marginTop="5dp"
                android:fontFamily="casual"
                android:text="@string/Pressure"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold"
                android:visibility="invisible"
                app:layout_constraintEnd_toStartOf="@+id/lattitude_tv6"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView6"
                tools:ignore="HardcodedText,MissingConstraints" />

            <TextView
                android:id="@+id/wind"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginLeft="32dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:fontFamily="casual"
                android:text="@string/Wind_Speed"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold"
                android:visibility="invisible"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/lattitude_tv7"
                app:layout_constraintHorizontal_bias="0.028"
                app:layout_constraintStart_toStartOf="parent"
                tools:ignore="HardcodedText,MissingConstraints" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/latitude_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:fontFamily="casual"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/longitude_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:fontFamily="casual"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/humidity_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:fontFamily="casual"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/sunrise_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:fontFamily="casual"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/sunset_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:fontFamily="casual"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/pressure_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:fontFamily="casual"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/windspeed_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:fontFamily="casual"
                android:textColor="@color/white"
                android:textSize="20sp" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>